force-app/main/default/objects/ResidentHistory__c/ResidentHistory__c.object-meta.xml
<CustomObject>
    <label>入居者履歴</label>
    <nameField>
        <label>入居者履歴名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>