force-app/main/default/objects/ResidentHistory__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>入居者履歴</relationshipLabel>
    <relationshipName>ContactResidentHistory</relationshipName>
    <type>Lookup</type>
</CustomField>