force-app/main/default/objects/ResidentHistory__c/fields/MoveDate__c.field-meta.xml
<CustomField>
    <fullName>MoveDate__c</fullName>
    <label>入居日</label>
    <type>Date</type>
</CustomField>